# AnimeDescale

./: CMakeLists.txt  README.md
cmake/dependency/: ac.cmake  cli11.cmake  hashpp.cmake
include/: Descale.hpp  Options.hpp  common.h  descale.h  descale_avx2.h
src/: Descale.cpp  Main.cpp  Options.cpp  descale.c  descale_avx2.c
